<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        app:cnb_iconColor="@color/darkGreen"
        android:title="@string/home" />

    <item
        android:id="@+id/cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        app:cnb_iconColor="@color/darkGreen"
        android:title="@string/cart" />

    <item
        android:id="@+id/wishlist"
        android:icon="@drawable/heart"
        app:cnb_iconColor="@color/darkGreen"
        android:title="@string/wishlist" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_person_24"
        app:cnb_iconColor="@color/darkGreen"
        android:title="@string/profile" />

</menu>