<layout>
    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:id="@+id/loginPageDesign"
            android:layout_width="match_parent"
            android:background="@drawable/login_page_design"
            android:layout_height="@dimen/dimen_350dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="6"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:text="@string/signup"
                android:layout_marginStart="@dimen/dimen_15dp"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_25sp"
                android:textStyle="bold"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginStart="@dimen/dimen_15dp"
                android:text="@string/sign_in_to_discover_amazing_things_naround_you"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_15sp" />

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/detailsCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_430dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"

            app:cardCornerRadius="@dimen/dimen_20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginRight="@dimen/dimen_20dp">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text"
                        android:hint="@string/name"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_20dp">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_20dp"
                    android:background="@drawable/edit_text"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="6"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPassLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_20dp"
                    android:background="@drawable/edit_text"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:maxLength="6"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_40dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginEnd="@dimen/dimen_40dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/next" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dimen_15dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/by_signing_up_you_accept_our_"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/dimen_13sp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="center"
            android:id="@+id/orSignUpwith"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimen_90dp"
            android:text="@string/or_signup_with"
            android:textColor="@color/grey"
            android:layout_alignBottom="@id/detailsCard"
            android:textSize="@dimen/dimen_15sp" />

        <LinearLayout
            android:layout_alignBottom="@id/orSignUpwith"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimen_30dp"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:src="@drawable/google_icon" />

            <ImageView
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:src="@drawable/facebook_icon" />
        </LinearLayout>
    </RelativeLayout>

</layout>