<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">


        <LinearLayout
            android:id="@+id/loginPageDesign"
            android:layout_width="match_parent"
            android:background="@drawable/login_page_design"
            android:layout_height="@dimen/dimen_400dp"
            android:orientation="horizontal">
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_450dp"
            android:layout_alignBottom="@id/loginPageDesign"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:layout_marginBottom="@dimen/dimen_nega_200dp"
            app:cardCornerRadius="@dimen/dimen_20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/dimen_25sp"
                    android:textStyle="bold"

                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_20dp">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_20dp"
                    android:background="@drawable/edit_text"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="6"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:gravity="end"
                    android:text="@string/forgotPassword"
                    android:textColor="@color/red"
                    android:layout_marginEnd="@dimen/dimen_25dp"
                    android:textSize="@dimen/dimen_15sp" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_40dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginEnd="@dimen/dimen_40dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/login" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/dimen_20dp"
                        android:gravity="center"
                        android:text="@string/or_login_with"
                        android:textColor="#AFAEAE"
                        android:textSize="@dimen/dimen_15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_15dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/dimen_40dp"
                        android:layout_height="@dimen/dimen_40dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:src="@drawable/google_icon" />

                    <ImageView
                        android:layout_width="@dimen/dimen_40dp"
                        android:layout_height="@dimen/dimen_40dp"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:src="@drawable/facebook_icon" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:gravity="center"
                    android:text="@string/dont_have_account_signup"
                    android:textColor="@color/dark_grey"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</layout>